# G4VoxelData

./: .gitignore  CMakeLists.txt  README.md  g4voxeldata-config.cmake.in
docs/: doxygen.conf
example/: CMakeLists.txt  VoxelDataExample.cc
example/include/: DetectorConstruction.hh  NumpyDataIO.hh  SensitiveDetector.hh
example/macros/: vis.mac
example/src/: DetectorConstruction.cc
examples/dicom/: CMakeLists.txt  VoxelDataExample.cc
examples/dicom/include/: DetectorConstruction.hh  PhysicsList.hh
examples/dicom/macros/: vis.mac
examples/dicom/src/: DetectorConstruction.cc  PhysicsList.cc  SensitiveDetector.cc  SteppingAction.cc
examples/hdf5/: CMakeLists.txt  HDF5Example.cc  README.md  makedata.py  test.hdf5
examples/hdf5/include/: DetectorConstruction.hh  PrimaryGeneratorAction.hh
examples/hdf5/src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc
examples/numpy/: CMakeLists.txt  NumpyExample.cc  README.md
examples/numpy/data/: data.npy
examples/numpy/include/: DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh
examples/numpy/macros/: vis.mac
examples/numpy/src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc
examples/txt/: CMakeLists.txt  TxtExample.cc  data.txt
include/: DicomDataIO.hh  G4VoxelArray.hh  G4VoxelArrayMappedIO.hh  G4VoxelData.hh  G4VoxelDataIO.hh  G4VoxelDataLogger.hh  G4VoxelDataParameterisation.hh  G4VoxelDetector.hh  HDF5MappedIO.hh  NIFTIMappedIO.hh  NumpyDataIO.hh  TxtDataIO.hh
python/: CMakeLists.txt  lib_G4VoxelData.cc
source/include/: DicomDataIO.hh  G4VoxelData.hh  G4VoxelDataIO.hh  G4VoxelDataStore.hh
source/src/: G4VoxelData.cc  G4VoxelDataIO.cc  G4VoxelDataStore.cc
tests/: CMakeLists.txt  tests.cc
